--- a/frontend/index.html
+++ b/frontend/index.html
@@ -355,8 +355,47 @@
             </div>
         </div>
 
-        <!-- Step 4: Other Passive Income -->
+        <!-- Step 4: Retirement Accounts -->
         <div class="step" id="step4">
+            <div class="step-content">
+                <h1>Retirement Accounts</h1>
+                <p class="subtitle">Track your 401(k), IRA, Roth IRA, and other retirement savings</p>
+
+                <div class="retirement-input-section">
+                    <div class="input-row">
+                        <select id="retirementAccountType" class="input-field">
+                            <option value="">Select account type...</option>
+                            <option value="401k">401(k)</option>
+                            <option value="roth-ira">Roth IRA</option>
+                            <option value="traditional-ira">Traditional IRA</option>
+                            <option value="403b">403(b)</option>
+                            <option value="sep-ira">SEP IRA</option>
+                            <option value="simple-ira">SIMPLE IRA</option>
+                            <option value="pension">Pension</option>
+                            <option value="other">Other</option>
+                        </select>
+                        <input type="number" id="retirementAccountBalance" class="input-field"
+                            placeholder="Current balance" min="0" step="1000">
+                        <button class="btn-secondary" onclick="addRetirementAccount()">Add</button>
+                    </div>
+                </div>
+
+                <div id="retirementList" class="list-container"></div>
+
+                <div id="totalRetirement" class="total-box" style="display: none;">
+                    <span>Total Retirement Savings:</span>
+                    <span class="total-value" id="totalRetirementValue">$0.00</span>
+                </div>
+
+                <div class="button-group">
+                    <button class="btn-secondary" onclick="prevStep()">← Back</button>
+                    <button class="btn-primary" onclick="nextStep()">Next →</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Step 5: Other Passive Income -->
+        <div class="step" id="step5">
             <div class="step-content">
                 <h1>Other Passive Income</h1>
                 <p class="subtitle">Any other passive income sources? (Royalties, side businesses, etc.)</p>
@@ -387,8 +426,8 @@
             </div>
         </div>
 
-        <!-- Step 5: Monthly Expenses -->
-        <div class="step" id="step5">
+        <!-- Step 6: Monthly Expenses -->
+        <div class="step" id="step6">
             <div class="step-content">
                 <h1>Monthly Expenses</h1>
                 <p class="subtitle">List all your essential monthly expenses, feel free to exclude mortgage</p>
@@ -420,27 +459,31 @@
             </div>
         </div>
 
-        <!-- Step 6: Calculating Goals -->
-        <div class="step" id="step6">
+        <!-- Step 7: Calculating Goals -->
+        <div class="step" id="step7">
             <div class="step-content">
                 <div class="calculating-container">
                     <div class="spinner" id="calcSpinner"></div>
-                    <h1 id="calcHeader">Setting Up Your Goals</h1>
+                    <h1 id="calcHeader">Setting Up your Financial Independence numbers</h1>
                     <p class="calculating-text">Analyzing your income streams and expenses...</p>
                     <div class="calculating-steps">
-                        <div class="calc-step" id="calcStep1" style="display:none;">✓ Calculating total passive income
+                        <div class="calc-step" id="calcStep1" style="display:none;">✓ Calculating portfolio passive
+                            income
                         </div>
-                        <div class="calc-step" id="calcStep2" style="display:none;">✓ Sorting expenses by priority</div>
-                        <div class="calc-step" id="calcStep3" style="display:none;">✓ Creating milestone tiers</div>
-                        <div class="calc-step" id="calcStep4" style="display:none;">✓ Determining progress</div>
-                        <div class="calc-step" id="calcStep5" style="display:none;">✓ Creating goals</div>
+                        <div class="calc-step" id="calcStep2" style="display:none;">✓ Calculating total annual income
+                        </div>
+                        <div class="calc-step" id="calcStep3" style="display:none;">✓ Calculating total monthly expenses
+                        </div>
+                        <div class="calc-step" id="calcStep4" style="display:none;">✓ Calculating FIRE number</div>
+                        <div class="calc-step" id="calcStep5" style="display:none;">✓ Calculating Financial independence
+                            year</div>
                     </div>
 
                     <!-- Lightweight signup CTA (non-primary styling) -->
                     <div class="info-banner" id="signupBanner"
                         style="display:none; margin-top:16px; padding:12px 14px; border:1px solid rgba(0,0,0,0.08); border-radius:10px; background: linear-gradient(0deg, rgba(0,0,0,0.02), rgba(0,0,0,0.02)), #fff; align-items:center; justify-content:space-between; gap:12px;">
                         <div style="font-size:14px; color:#374151; text-align:left;">
-                            Save Your Plan & Unlock Next Steps.
+                            Sign Up to save your financial independence numbers
                         </div>
                         <div style="display:flex; align-items:center; gap:8px;">
                             <a href="/signup"
@@ -453,37 +496,6 @@
                             </button>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Step 7: Congratulations -->
-        <div class="step" id="step7">
-            <div class="step-content">
-                <div class="congrats-container">
-                    <div class="congrats-icon">🎉</div>
-                    <h1>Congratulations!</h1>
-                    <p class="congrats-text">Your passive income goals are ready!</p>
-
-                    <div class="summary-cards">
-                        <div class="summary-card">
-                            <div class="summary-label">Total Passive Income</div>
-                            <div class="summary-value" id="summaryIncome">$0</div>
-                            <div class="summary-sublabel">per month</div>
-                        </div>
-                        <div class="summary-card">
-                            <div class="summary-label">Total Expenses</div>
-                            <div class="summary-value" id="summaryExpenses">$0</div>
-                            <div class="summary-sublabel">per month</div>
-                        </div>
-                        <div class="summary-card">
-                            <div class="summary-label">Goals Achieved</div>
-                            <div class="summary-value" id="summaryGoals">0/0</div>
-                            <div class="summary-sublabel">milestones</div>
-                        </div>
-                    </div>
-
-                    <button class="btn-primary btn-cta-pulse" onclick="nextStep()">View Dashboard →</button>
                 </div>
             </div>
         </div>
@@ -576,20 +588,45 @@
     <div class="modal-overlay" id="expenseEditModal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Edit Monthly Expenses</h2>
+                <h2>Monthly Expenses</h2>
                 <button class="modal-close" onclick="closeExpenseModal()">&times;</button>
             </div>
+
+            <!-- Tab Navigation -->
+            <div class="modal-tabs">
+                <button class="tab-button active" id="tabExpenseOverview" onclick="switchExpenseTab('overview')">📊
+                    Overview</button>
+                <button class="tab-button" id="tabExpenseEdit" onclick="switchExpenseTab('edit')">✏️ Edit</button>
+            </div>
+
             <div class="modal-body">
-                <div class="expense-edit-list" id="expenseEditList">
-                    <!-- Expenses will be populated here -->
+                <!-- Overview Tab Content -->
+                <div class="tab-content active" id="contentExpenseOverview">
+                    <div class="expense-chart-container"
+                        style="padding: 16px; background: #f9fafb; border-radius: 12px;">
+                        <h3
+                            style="margin: 0 0 16px 0; font-size: 18px; font-weight: 600; color: #374151; text-align: center;">
+                            Monthly Expense Breakdown</h3>
+                        <div style="max-width: 350px; margin: 0 auto;">
+                            <canvas id="expenseBreakdownChart"></canvas>
+                        </div>
+                    </div>
                 </div>
-                <div class="add-expense-row">
-                    <input type="text" id="modalExpenseName" placeholder="Expense Name" class="input-field">
-                    <input type="number" id="modalExpenseAmount" placeholder="Amount ($)" class="input-field" min="0"
-                        step="10">
-                    <button class="btn-secondary" onclick="addExpenseFromModal()">Add</button>
+
+                <!-- Edit Tab Content -->
+                <div class="tab-content" id="contentExpenseEdit">
+                    <div class="expense-edit-list" id="expenseEditList">
+                        <!-- Expenses will be populated here -->
+                    </div>
+                    <div class="add-expense-row">
+                        <input type="text" id="modalExpenseName" placeholder="Expense Name" class="input-field">
+                        <input type="number" id="modalExpenseAmount" placeholder="Amount ($)" class="input-field"
+                            min="0" step="10">
+                        <button class="btn-secondary" onclick="addExpenseFromModal()">Add</button>
+                    </div>
                 </div>
             </div>
+
             <div class="modal-footer">
                 <button class="btn-secondary" onclick="closeExpenseModal()">Cancel</button>
                 <button class="btn-primary" onclick="saveExpenseChanges()">Save Changes</button>
@@ -601,21 +638,50 @@
     <div class="modal-overlay" id="incomeEditModal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Edit Monthly Income</h2>
+                <h2>Assets/Income</h2>
                 <button class="modal-close" onclick="closeIncomeModal()">&times;</button>
             </div>
 
             <!-- Tab Navigation -->
             <div class="modal-tabs">
-                <button class="tab-button active" id="tabStocks" onclick="switchIncomeTab('stocks')">📊 Stocks</button>
+                <button class="tab-button active" id="tabOverview" onclick="switchIncomeTab('overview')">📊
+                    Overview</button>
+                <button class="tab-button" id="tabJob" onclick="switchIncomeTab('job')">💼 Job Income</button>
+                <button class="tab-button" id="tabStocks" onclick="switchIncomeTab('stocks')">📈 Stocks</button>
                 <button class="tab-button" id="tabRental" onclick="switchIncomeTab('rental')">🏠 Rental</button>
                 <button class="tab-button" id="tabOther" onclick="switchIncomeTab('other')">💰 Other</button>
-                <button class="tab-button" id="tabJob" onclick="switchIncomeTab('job')">💼 Job Income</button>
             </div>
 
             <div class="modal-body">
+                <!-- Overview Tab Content -->
+                <div class="tab-content active" id="contentOverview">
+                    <div class="income-chart-container"
+                        style="padding: 16px; background: #f9fafb; border-radius: 12px;">
+                        <h3
+                            style="margin: 0 0 16px 0; font-size: 18px; font-weight: 600; color: #374151; text-align: center;">
+                            Monthly Income Breakdown</h3>
+                        <div style="max-width: 350px; margin: 0 auto;">
+                            <canvas id="incomeBreakdownChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Job Income Tab Content -->
+                <div class="tab-content active" id="contentJob">
+                    <label for="modalJobIncome"
+                        style="display: block; margin-bottom: 8px; font-weight: 500; color: #374151;">Annual Income from
+                        Job(s):</label>
+                    <div class="job-income-edit-item"
+                        style="display: flex; gap: 12px; align-items: center; padding: 12px; border: 1px solid #e5e7eb; border-radius: 8px; background: #f9fafb;">
+                        <input type="number" id="modalJobIncome" class="input-field" min="0" step="1000"
+                            placeholder="Annual Income" style="flex: 1; max-width: 200px;">
+                        <span class="stock-income" id="jobIncomeMonthly"
+                            style="color: #3b82f6; font-weight: 600; min-width: 100px;">$0/mo</span>
+                    </div>
+                </div>
+
                 <!-- Stocks Tab Content -->
-                <div class="tab-content active" id="contentStocks">
+                <div class="tab-content" id="contentStocks">
                     <div class="income-edit-list" id="stockEditList">
                         <!-- Stocks will be populated here -->
                     </div>
@@ -653,23 +719,6 @@
                     </div>
                 </div>
 
-                <!-- Job Income Tab Content -->
-                <div class="tab-content" id="contentJob">
-                    <div class="job-income-section">
-                        <h4>Annual Family Income</h4>
-                        <div class="job-income-item">
-                            <label for="modalJobIncome">Total Annual Income from Job(s):</label>
-                            <input type="number" id="modalJobIncome" class="input-field" min="0" step="1000"
-                                placeholder="Annual Income">
-                        </div>
-                        <div class="job-income-display">
-                            <div class="income-breakdown">
-                                <span>Monthly Equivalent:</span>
-                                <span id="jobIncomeMonthly">$0/month</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
             </div>
 
@@ -690,8 +739,10 @@
             <div class="modal-body">
                 <div class="fire-explanation">
                     <div class="fire-intro">
-                        <p>Your <strong>FIRE Number</strong> is the total amount you need invested to achieve Financial
-                            Independence and Retire Early (FIRE). It's calculated using the <strong>4% Safe Withdrawal
+                        <p>Your <strong>FIRE Number</strong> is the total amount you need invested to achieve
+                            Financial
+                            Independence and Retire Early (FIRE). It's calculated using the <strong>4% Safe
+                                Withdrawal
                                 Rule</strong>.</p>
                     </div>
 
@@ -715,8 +766,10 @@
 
                     <div class="fire-explanation-text">
                         <h3>What does this mean?</h3>
-                        <p>Once you have <span id="fireModalFireNumberText">$0</span> invested, you can safely withdraw
-                            4% per year (<span id="fireModalAnnualWithdrawal">$0</span>) to cover your expenses without
+                        <p>Once you have <span id="fireModalFireNumberText">$0</span> invested, you can safely
+                            withdraw
+                            4% per year (<span id="fireModalAnnualWithdrawal">$0</span>) to cover your expenses
+                            without
                             touching the principal. This means you're financially independent!</p>
 
                         <div class="fire-progress">
@@ -802,7 +855,8 @@
                     <div class="fire-explanation-text">
                         <h3>What does this mean?</h3>
                         <p id="fiYearModalExplanation">Based on your current savings and investment strategy, you're
-                            projected to reach financial independence in <span id="fiYearModalYearsToGo">0</span> years.
+                            projected to reach financial independence in <span id="fiYearModalYearsToGo">0</span>
+                            years.
                         </p>
 
                         <div class="fire-progress">
@@ -829,7 +883,8 @@
                     <div class="fire-customization">
                         <div class="customization-note">
                             <p><strong>Want to reach FI faster?</strong></p>
-                            <p>Try increasing your savings rate, optimizing your investment returns, or reducing your
+                            <p>Try increasing your savings rate, optimizing your investment returns, or reducing
+                                your
                                 expenses. Small changes can have a big impact over time!</p>
                             <button class="btn-secondary" onclick="showFIOptimization()" disabled>
                                 Optimize Your FI Timeline (Coming Soon)
@@ -870,6 +925,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     <script src="config.js"></script>
     <!-- Markdown rendering and sanitization for chatbot -->
