added retirement part to the total portfolio and the calculations too

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -874,7 +874,7 @@
                                 <span>5% annually</span>
                             </div>
                             <div class="progress-item">
-                                <span>Final Portfolio Value:</span>
+                                <span>Total Net Worth:</span>
                                 <span id="fiYearModalFinalValue">$0</span>
                             </div>
                         </div>
