feat: add screenshot upload UI for portfolio extraction
- Added new image upload section to allow users to import portfolios from broker statements
- Created styled upload container with gradient background and dashed border
- Added placeholder button with "coming soon" message for upcoming AI extraction feature
- Included list of supported brokers (Robinhood, Fidelity, Schwab, E*TRADE)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -239,6 +239,26 @@
 
                     <div id="tickerList" class="ticker-list"></div>
 
+                    <!-- Image Upload Section -->
+                    <div class="upload-section"
+                        style="margin-top: 24px; padding: 20px; border: 2px dashed #cbd5e1; border-radius: 12px; text-align: center; background: linear-gradient(0deg, rgba(102, 126, 234, 0.02), rgba(102, 126, 234, 0.02)), #fff;">
+                        <div style="font-size: 32px; margin-bottom: 8px;">📸</div>
+                        <h3 style="margin: 0 0 8px 0; font-size: 16px; font-weight: 600; color: #1f2937;">Upload
+                            Brokerage Screenshots</h3>
+                        <p style="color: #64748b; margin: 0 0 16px 0; font-size: 14px;">Automatically extract your
+                            portfolio from broker statements</p>
+
+                        <button type="button"
+                            onclick="alert('🚀 Coming soon! We\'re building AI-powered portfolio extraction from screenshots.')"
+                            class="btn-secondary" style="padding: 10px 24px; font-size: 14px;">
+                            📤 Upload Images
+                        </button>
+
+                        <p style="margin-top: 12px; font-size: 12px; color: #94a3b8;">
+                            Supported: Robinhood, Fidelity, Schwab, E*TRADE, and more
+                        </p>
+                    </div>
+
                     <div id="blendedYield" class="blended-yield-box" style="display: none;">
                         <h3>Your Portfolio Summary</h3>
                         <div class="yield-display">
